update three blog of tools

--- a/个人博客 _posts/工具/2022-06-18-SSH 工具介绍及常见使用方法.md
+++ b/个人博客 _posts/工具/2022-06-18-SSH 工具介绍及常见使用方法.md
@@ -15,7 +15,7 @@ SSH主要用于远程登录。假定你要以用户名user，登录远程主机h
 	```
 	输入`yes`并且输入登录密码之后，本地便将目标主机的公钥保存在`user/.ssh/known_host`文件之中，下次登录就可以省去此步警告，直接输入密码登录
 1. 公钥登录方法  
-	参考: [[工具/SSH 配置公钥登录]]
+	参考: [[2022-06-18-SSH 配置公钥登录]]
 	
 	使用密码登录，每次都必须输入密码，非常麻烦。好在SSH还提供了公钥登录，可以省去输入密码的步骤。
 	所谓”公钥登录”，原理很简单，就是用户将自己的公钥储存在远程主机上。登录的时候，远程主机会向用户发送一段随机字符串，用户用自己的私钥加密后，再发回来。远程主机用事先储存的公钥进行解密，如果成功，就证明用户是可信的，直接允许登录shell，不再要求密码。
